--- a/src/global.styl
+++ b/src/global.styl
@@ -1,11 +1,16 @@
 *
 	box-sizing border-box
-a
-	text-decoration none
-	color inherit
 body
 	height 100vh
 	width 100vw
+button
+	border 0
+	font inherit
+	font-size 10px
+	background #f0f0f0
+	color gray
+	padding 1rem 4rem
+	border-radius 10px
 body,
 h1, h2, h3, h4, h5, h6,
 figure,
@@ -21,17 +26,13 @@ ol, ul
 	list-style-position inside
 iframe
 video
-	width 854px
-	height 480px
+	width 640px
+	height 360px
 	border-radius 2rem
 .md
 	white-space pre-wrap
 	word-break break-word
-	.comment > &
-	.post-text > &
-		width 55ch
-		padding 8px
-		background rgba(0,0,0,0.03)
+	overflow-wrap anywhere
 	a
 		color steelblue
 		text-decoration none
