--- a/src/view/post/PostVideo.pug
+++ b/src/view/post/PostVideo.pug
@@ -1,9 +1,28 @@
 script.
 	export data = null
+	import { onMount } from 'svelte'
+	video = null
+	audio = null
+	onMount () =>
+		video.addEventListener 'play', (e) ->
+			audio.play()
+		video.addEventListener 'pause', (e) ->
+			audio.pause()
+		video.addEventListener 'seeked', (e) ->
+			audio.currentTime = video.currentTime
+		video.addEventListener 'waiting', (e) ->
+			audio.pause()
+			audio.currentTime = video.currentTime
+		video.addEventListener 'playing', (e) ->
+			if audio.paused then audio.play()
 
-video(controls='true')
+video(bind:this={video} controls='true')
 	{#each data.tracks.video as representation}
 		source(src={representation.href} type={representation.mime_type})
-audio(controls='true')
+audio(bind:this={audio})
 	{#each data.tracks.audio as representation}
 		source(src={representation.href} type={representation.mime_type})
+
+style.
+	audio
+		display none
