--- a/src/view/feed/FeedItemDetail.pug
+++ b/src/view/feed/FeedItemDetail.pug
@@ -15,9 +15,10 @@ script.
 
 style.
 	.detail-pane
-		grid-area center-right
+		position fixed
+		top 0
+		left 0
 		width 100%
 		height 100%
 		overflow auto
-		border-left 1px solid
-		padding-left 10rem
+		background white
