--- a/src/view/feed/FeedItemList.pug
+++ b/src/view/feed/FeedItemList.pug
@@ -10,11 +10,21 @@ script.
 ol(class={format})
 	{#each items as item}
 		li(class:selected={selection_id === item.id})
-			{#if item instanceof PostSnapshot}
-				PostTitle(post={item})
-			{:else if item instanceof CommentSnapshot}
-				CommentTree(data={item})
+			a(href='#{item.id}' data-href='#{item.id}')
+				{#if item instanceof PostSnapshot}
+					PostTitle(post={item})
+				{:else if item instanceof CommentSnapshot}
+					CommentTree(data={item})
 
 style.
 	ol
 		list-style none
+		display grid
+		grid-template-columns repeat(5, 1fr)
+		grid-template-rows repeat(2, 1fr)
+	li
+		margin 2rem
+	a
+		display block
+		width 320px
+		height 320px
