--- a/src/view/post/PostTitle.pug
+++ b/src/view/post/PostTitle.pug
@@ -1,16 +1,19 @@
 script.
 	export post = null
 
-.post-title
-	.post-meta
-		a(href='u/{post.author.name}') {post.author.name}
-	a(href='#{post.id}' on:auxclick={() => window.open(post.permalink)}) {post.content.title}
+{#if post.content.type === 'image'}
+	img(src={post.content.data[0].dimension_target({ width: 320, height: 320 }).href})
+{:else}
+	.post-title {post.content.title}
 	.post-meta {post.flairs.title.text}
 
 style.
+	img
+		width 100%
+		height 100%
+		object-fit cover
 	.post-title
-		margin 2rem
-		font-size 15px
+		font-size 36px
 	.post-meta
 		font-size 10px
 		color lightgray
