small layout tweaks

--- a/src/common.styl
+++ b/src/common.styl
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6
 	font-weight normal
 	margin 1em 0
 ol, ul
-	list-style-position inside
+	list-style none
 iframe
 video
 	width 640px
