--- a/src/view/frame/App.pug
+++ b/src/view/frame/App.pug
@@ -94,26 +94,37 @@ svelte:head
 	title {layers.last().type}
 {#each layers as layer, i}
 	{#if layer.tapped}
-		main(class:hidden={i < layers.length - 1})
+		main.hide-scrollbar(class:hidden={i < layers.length - 1})
 			Layer(layer={layer})
 {#if layers.last().type !== 'image'}
 	nav
 		ol
 			{#each layers as layer, i}
 				li
-					a(href={layer.href} data-goto-layer={i} class:untapped={!layer.tapped}) {layer.type}
+					a(href={layer.href} data-goto-layer={i} class:untapped={!layer.tapped})
+						img
 
 style.
 	main
 		position fixed
 		top 0
-		left 0
+		left 10vw
+		height 100vh
+		width 90vw
+		overflow auto
 		&.hidden
 			content-visibility hidden
 	nav
 		position fixed
 		top 0
-		right 0
-	a
-		&.untapped
-			opacity 0.5
+		left 0
+		li
+			margin 4rem
+		a
+			&.untapped
+				opacity 0.5
+			img
+				height 64px
+				width 64px
+				border-radius 50%
+				border 1px solid
