--- a/src/view/layer/Feed.pug
+++ b/src/view/layer/Feed.pug
@@ -23,10 +23,8 @@ AWAIT(let:v p={feed.PAGE})
 
 style.
 	ol
-		list-style none
-		display grid
-		grid-template-columns repeat(5, 1fr)
-		grid-template-rows repeat(2, 1fr)
+		display flex
+		flex-flow row wrap
 	li
 		margin 2rem
 	a
@@ -37,6 +35,7 @@ style.
 		width 100%
 		height 100%
 		object-fit cover
+		object-position top left
 	.post-title
 		font-size 36px
 	.post-meta
