--- a/src/view/frame/App.pug
+++ b/src/view/frame/App.pug
@@ -108,16 +108,16 @@ style.
 	main
 		position fixed
 		top 0
-		left 10vw
+		left 0
 		height 100vh
-		width 90vw
+		width 100vw
 		overflow auto
 		&.hidden
 			content-visibility hidden
 	nav
 		position fixed
 		top 0
-		left 0
+		right 0
 		li
 			margin 4rem
 		a
