--- a/src/view/partial/PostImage.pug
+++ b/src/view/partial/PostImage.pug
@@ -25,6 +25,7 @@ style.
 		border-radius 2rem
 		word-break break-word
 	img
+		box-sizing content-box
 		max-width 640px
-		border-radius 2rem
+		border 1px solid
 		cursor zoom-in
