--- a/src/view/layer/Feed.pug
+++ b/src/view/layer/Feed.pug
@@ -27,10 +27,14 @@ style.
 		flex-flow row wrap
 	li
 		margin 2rem
+		overflow hidden
+		text-overflow ellipsis
 	a
 		display block
-		width 320px
-		height 320px
+		box-sizing content-box
+		width 216px
+		height 216px
+		border 1px solid
 	img
 		width 100%
 		height 100%
@@ -38,6 +42,7 @@ style.
 		object-position top left
 	.post-title
 		font-size 36px
+		font-weight bold
 	.post-meta
 		font-size 10px
 		color lightgray
