iterate layout; add placeholder saved & mail feeds

--- a/src/view/frame/App.pug
+++ b/src/view/frame/App.pug
@@ -112,12 +112,14 @@ style.
 		height 100vh
 		width 100vw
 		overflow auto
+		display grid
+		justify-content center
 		&.hidden
 			content-visibility hidden
 	nav
 		position fixed
 		top 0
-		right 0
+		left 0
 		li
 			margin 4rem
 		a
