--- a/src/view/partial/CommentTree.pug
+++ b/src/view/partial/CommentTree.pug
@@ -23,6 +23,8 @@ style.
 	.comment-tree
 		margin-top 1em
 	.comment
+		display inline-block
+		max-width 640px
 		padding 3rem 4rem
 		border 1px solid lightgray
 	.comment-meta
