--- a/src/view/layer/Feed.pug
+++ b/src/view/layer/Feed.pug
@@ -13,9 +13,9 @@ AWAIT(let:v p={feed.PAGE})
 				AWAIT(let:v p={item.POST})
 					{#if !v.stickied}
 						li
-							a(href={v.href})
+							a(href={v.href} style='color: {v.flairs.title.color}')
 								{#if v.content.type === 'image'}
-									img(src={v.content.data[0].dimension_target({ width: 320, height: 320 }).href})
+									img(src={v.content.data[0].dimension_target({ width: 216, height: 216 }).href})
 								{:else}
 									.post-title {v.title}
 			{:else if item instanceof Comment}
@@ -32,23 +32,23 @@ style.
 		grid-template-columns repeat(3, 216px)
 		grid-template-rows repeat(3, 216px)
 		place-content center
-		gap 3rem
+		gap 5rem
 	li
 		height 100%
 		width 100%
-		overflow hidden
-		text-overflow ellipsis
 	a
-		display block
-		width 100%
-		height 100%
 		text-decoration none
 		color black
 	img
+	.post-title
 		height 100%
 		width 100%
-		object-fit cover
-		object-position center
+	img
+		object-fit contain
 	.post-title
-		font-size 26px
-		font-weight bold
+		display grid
+		place-items center
+		overflow hidden
+		padding 3rem
+		text-align center
+		font 20px monospace
