--- a/src/view/layer/Image.pug
+++ b/src/view/layer/Image.pug
@@ -5,5 +5,7 @@ img(src={href})
 
 style.
 	img
-		max-height 100vh
-		max-width 100vw
+		height 100vh
+		width 100vw
+		object-fit contain
+		object-position center
