--- a/src/view/layer/Post.pug
+++ b/src/view/layer/Post.pug
@@ -19,10 +19,16 @@ article
 
 style.
 	article
-		width 640px
+		width 80vw
+		display flex
+		flex-flow column nowrap
+		align-items center
 	header
-		margin 2em 0
+		margin 4em 0 2em 0
+		width 960px
 		text-align center
 	h1
-		font-size 22px
+		font 20px monospace
 		margin 0
+	address
+		display none
