--- a/src/view/partial/DistinguishTag.pug
+++ b/src/view/partial/DistinguishTag.pug
@@ -19,6 +19,7 @@ span(style='background: {color}') {text}
 style.
 	span
 		color white
-		font 700 10px 'Iosevka Aile'
+		font-size 10px
+		font-weight bold
 		padding 1px 5px
 		border-radius 4px
