--- a/src/view/partial/CommentTree.pug
+++ b/src/view/partial/CommentTree.pug
@@ -25,12 +25,13 @@ style.
 	.comment
 		display inline-block
 		max-width 640px
-		padding 3rem 4rem
-		border 1px solid lightgray
+		font 13px Tahoma
 	.comment-meta
-		position relative
-		background white
-		color lightgray
-		font-size 10px
+		display inline-block
+		font 10px Courier
+		margin-bottom 1rem
+	a
+		text-decoration none
+		color wheat
 	.replies
 		padding-left 10rem
