--- a/src/common.styl
+++ b/src/common.styl
@@ -19,14 +19,11 @@ body
 	background var(--white)
 	color var(--black)
 button
+	padding 0
 	border 0
 	font inherit
-	font-size 10px
-	background #f0f0f0
-	color gray
-	padding 1rem 4rem
+	cursor pointer
 body,
-h1, h2, h3, h4, h5, h6,
 figure,
 menu,
 ol, ul
@@ -35,12 +32,14 @@ ol, ul
 h1, h2, h3, h4, h5, h6
 	font-size inherit
 	font-weight normal
-	margin 1em 0
+	margin 0
 ol, ul
 	list-style none
 img
 video
 	box-sizing content-box
+iframe
+	border 0
 iframe
 video
 	width 1280px
